Added rewrites and cleanups

--- a/content/frontmatter/abstract.tex
+++ b/content/frontmatter/abstract.tex
@@ -5,6 +5,7 @@
 % A space is needed before the text starts so that the first paragraph
 % is indented properly. Max 350 words.
 
+    % TODO: Rewrite
     A proxy voting system is a system in which agents are able to give their vote to
     other agents, known as proxies.
     These proxies vote on behalf of the agents who gave up their vote.
