--- a/content/frontmatter/notation.tex
+++ b/content/frontmatter/notation.tex
@@ -7,6 +7,8 @@
 \newcommand{\notationheader}[1]{\multicolumn{2}{l}{\textbf{#1}}\\}
 \newcommand{\notationdesc}[2]{#1 & #2\\}
 
+% TODO: Rephrase descriptions
+
 \begin{notation}
 \setlength{\tabcolsep}{3mm}{
     \begin{tabular}{ll}
