Clarification for preference space figure

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -98,7 +98,7 @@ opinions are closer to the center.
         \node at (\n)[circle,fill,inner sep=1.75pt]{};
     \end{tikzpicture}
 
-    \caption{Example of a preference metric space, where \truthof{x} represents the
+    \caption{Example of a 1D preference metric space, where \truthof{x} represents the
     preference of agent $x$.}
     \label{fig:system-metric-space}
 \end{figure}
