Small amount about voting mechanisms

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -117,30 +117,20 @@ situation where a congress member can choose their proxy for each topic individu
 %   - Finite voters
 %   - Additional voting mechanisms
 %   - Weighting mechanisms
-
-
-
-
-
-
-
-\etal{Cohensius} also introduce the concept of \textit{voting mechanisms} or
-\textit{voting rules}, which are functions that map a set of preferences
-in~\systemspace\ to an outcome that also exists in~\systemspace.
+% TODO: This and below should probably be moved into the background section
+This study also makes use of \textit{voting mechanisms} or \textit{voting rules},
+which are functions that map a set of preferences in~\systemspace\ to an outcome that
+also exists in~\systemspace.
 %
-\com{The idea of a voting mechanism did NOT start with Cohensius. Give credit to the
-proper originator.}
+% \com{The idea of a voting mechanism did NOT start with Cohensius. Give credit to the
+% proper originator.}
+% MDH: I've done some research to find the originator of the term, but it seems to be
+% a fairly common term. The idea at the very least seems to date back all the way to
+% ancient Greece, so I'm hoping it's safe to assume it's a common knowledge term.
 %
-This study employs the use of two of their mechanisms, the Mean and Median
-mechanisms, as well as introduces additional mechanisms.
-Additionally, this study introduces the idea of \textit{weighting mechanisms}, which
-determines how agents apply weights to proxies in the proxy vote system.
-%
-\com{Being able to divide your vote between multiple proxies would be interesting,
-    but it could be that you end up hurting your most preferred candidate. Suppose
-    the vote is between A and B. You like A slightly more. Suppose you give 60\% of
-    your vote to candidate A and 40\% to B. If someone else gave 100\% to B, B wins.
-    If you would have given 100\% to A, it would have been a tie.}
+This study employs the use of several common voting mechanisms and adapts them to the
+proxy voting system.
+These are described in~\autoref{subsec:voting-mechanisms}.
 
 While \etal{Cohensius} primarily examine voting mechanisms under random and strategic
 participation in a proxy vote system, this study will preselect proxies and require
