--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -125,8 +125,9 @@ also exists in~\systemspace.
 % \com{The idea of a voting mechanism did NOT start with Cohensius. Give credit to the
 % proper originator.}
 % MDH: I've done some research to find the originator of the term, but it seems to be
-% a fairly common term. The idea at the very least seems to date back all the way to
-% ancient Greece, so I'm hoping it's safe to assume it's a common knowledge term.
+% a fairly common term with no clear originator. The idea at the very least seems to
+% date back all the way to ancient Greece, so I'm hoping it's safe to assume it's a
+% common knowledge term.
 %
 This study employs the use of several common voting mechanisms and adapts them to the
 proxy voting system.
