Some info about about continuous votes

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -107,6 +107,10 @@ This model also naturally extends to two- or higher-dimensional spaces, such as
 the opinions of a congress member on multiple topics.
 However, as previously mentioned, we will only consider the idealistic
 situation where a congress member can choose their proxy for each topic individually.
+The model also allows for votes on topics that are not binary, such setting the
+budget for the year;
+instead of simply voting yes or no on some pre-chosen budget, the output of the system
+can serve as the budget.
 
 % Explain what Cohensius did
 %   - Strategic participation
