Fixed incorrect author for clerk letters

--- a/references/research.bib
+++ b/references/research.bib
@@ -146,7 +146,7 @@ There is not the first time proxy voting was discussed. There are other articles
 
 
 @Online{Clerk.House.gov2022,
-  author  = {Congress.gov},
+  author  = {Clerk.House.gov},
   title   = {Proxy Letters},
   url     = {https://clerk.house.gov/ProxyLetter},
   urldate = {2022-10-11},
