Rephrasing of proxy vote paragraph

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -158,15 +158,13 @@ measurements using the other agents.
 
 \section{Background}\label{sec:background}
 \textit{Proxy voting} involves allowing agents to transfer their voting power
-from themselves to another agent, known as a \textit{proxy}\cite[para.~1.4]
-{Cohensius2017}  \com{No need to give paragraph. You are mainly giving credit for
-the idea. You can't give Cohesius credit for the idea of proxy voting.}
+from themselves to another agent, known as a \textit{proxy}.
 This adds to the voting power of the proxy, which is called its `weight.'
-By doing so, the transferring agent loses their ability to directly affect the
+By delegating a proxy, the transferring agent loses their ability to directly affect the
 voting game, instead allowing the proxy to affect it on their behalf.
-In other words, the transferring agent does not vote in an election but rather
-affects the election vicariously through the proxy to which they transferred
-their power.
+In other words, the transferring agent does not vote in an election or other types of
+voting games, but rather affects the election vicariously through the proxy to which
+they transferred their power.
 These transferring agents are also known as \textit{inactive voters}, and the
 proxies can also be called \textit{active voters}.
 In contrast, \textit{direct voting} requires each agent to vote on their own.
