Rewrote proxy voting advantage paragraph

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -169,18 +169,17 @@ These transferring agents are also known as \textit{inactive voters}, and the
 proxies can also be called \textit{active voters}.
 In contrast, \textit{direct voting} requires each agent to vote on their own.
 
-Under normal circumstances, proxy voting has a number of advantages over direct voting.
+Proxy voting has a number of advantages over direct voting.
 The most obvious advantage is that it allows inactive voters to reduce the work
 required of them by choosing a proxy to perform the work of voting for them.
 Naturally, this is extremely useful when the cost of voting is high, such as
 when remaining educated on a topic is difficult or
-time-consuming~\cite[para.~1.1]{Mueller1972}, uncomfortable work such as
-standing in long queues is required, or other frustrating or costly obstacles
-must be overcome.  \com{Pick an application area and discuss the advantages of proxy
-voting for them. The cost of remaining educated indicates the person doesn't have a
-researched opinion. That is quite different from not being able to vote because of
-inconvenience. In many cases, we want the voters to be informed. If they aren't,
-    there are reasons to discount their vote.}
+time-consuming~\cite[para.~1.1]{Mueller1972} uncomfortable work such as standing in
+long queues is required, or other frustrating or costly obstacles must be overcome.
+For our purposes it is likely undesirable that the agents, being members of Congress,
+do not pay the cost of remaining educated, but proxy voting can still be beneficial
+to the agents because it would allow them to prevent the spread of disease or avoid
+whatever other emergency triggered the use of proxy voting.
 
 In these cases, proxy voting allows voters to skip incurring the costs while
 still having their voice heard by allowing a proxy to perform the work once on
