--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -174,7 +174,7 @@ The most obvious advantage is that it allows inactive voters to reduce the work
 required of them by choosing a proxy to perform the work of voting for them.
 Naturally, this is extremely useful when the cost of voting is high, such as
 when remaining educated on a topic is difficult or
-time-consuming~\cite[para.~1.1]{Mueller1972} uncomfortable work such as standing in
+time-consuming~\cite{Mueller1972} uncomfortable work such as standing in
 long queues is required, or other frustrating or costly obstacles must be overcome.
 For our purposes it is likely undesirable that the agents, being members of Congress,
 do not pay the cost of remaining educated, but proxy voting can still be beneficial
@@ -188,22 +188,6 @@ Of course, a voter would not want to give its voting power to just any proxy.
 This study employs a similar technique as used in~\cite{Cohensius2017}, which has the
 voters, or agents, pass their voting power to the proxy that is closest in the
 preference space.
-In addition to only transferring power to the closest, which here is called the
-`closest' weighting mechanism, this study examines additional ways to split weight
-among several or all proxies.
-% \vicki{  But if I'm turning my vote to a proxy, how is my vote heard? You could say
-% you impacted the vote, but not that your vote was heard. I don't know how you can say
-% the accuracy is increased, unless you know the proxy is smarter than you.
-% How do the voters find proxies and how do they decide who they trust? The reader is
-% unclear about the setup.}
-
-Additionally, measurements will have unfortunately already incurred their cost, since in
-order for them to have a preference they need to be performed.
-As such, this paper will not be able to take full advantage of relieving individual
-agents of some of their cost.
-However, by using less accurate measurement techniques with proxy voting, the hope
-is to increase the overall system accuracy without incurring the cost of using more
-accurate measurement techniques.
 
 In addition to reducing individual agents' work, proxy voting also often has
 the effect of increasing the system welfare by increasing the accuracy of the
