Moved paragraph to background

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -145,16 +145,6 @@ proxy voting from all members voting and only present members voting.
 This will be done using continuous outputs instead of binary `yea' or `nay' votes,
 since this will allow for more precise measurements in change.
 
-% TODO: This and below should probably be moved into the background section
-While \etal{Cohensius} primarily examine voting mechanisms under random and strategic
-participation in a proxy vote system, this study will preselect proxies and require
-all other agents to use them.
-The reasoning behind this compulsory proxy system is to allow a system designer to
-choose a suitable set of measurement techniques as the proxies, and reinforce their
-measurements using the other agents.
-%
-\com{Doesn't make sense for the House case Better bit to have this restriction.}
-
 
 \section{Background}\label{sec:background}
 \textit{Proxy voting} involves allowing agents to transfer their voting power
@@ -214,12 +204,6 @@ advantages.
 However, simple proxy voting, where proxies cannot transfer their voting power,
 is sufficient for the research performed in this paper.
 
-Proxy voting and liquid democracy are well-discussed topics with a number of
-papers investigating their viability, advantages, and disadvantages.  \com{Cite those
-papers here.}
-Many of these studies focus on political and societal uses for these techniques,
-but some of their discoveries can be used for this paper's purposes.
-
 James Miller~\cite{Miller1969} explored the idea of proxy voting as a more
 direct method of democracy over representative democracy.
 Most of his work focuses on the political and societal advantages of proxy
@@ -257,6 +241,15 @@ For this paper's purposes, a poor distribution of measurements may make one
 proxy a super voter and increase the error of the system.
 % \vicki{here it appears you know absolute truth, and just want to assure the voting
 % finds it.}
+
+% While \etal{Cohensius} primarily examine voting mechanisms under random and strategic
+% participation in a proxy vote system, this study will preselect proxies and require
+% all other agents to use them.
+% The reasoning behind this compulsory proxy system is to allow a system designer to
+% choose a suitable set of measurement techniques as the proxies, and reinforce their
+% measurements using the other agents.
+% %
+% \com{Doesn't make sense for the House case Better bit to have this restriction.}
 
 
 \section{Contribution}\label{sec:contribution}
