--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -196,9 +196,7 @@ As will be discussed in \autoref{ch:results}, this additional system welfare com
 the cost of some system accuracy since not all information can be restored.
 
 In some cases, the proxy is also able to transfer their own vote, as well as the rest of
-their weight, to yet another proxy   \com{What do you mean by voting weight?}
-% \vicki{You haven't told us about voting weight. If I can transfer my vote, why not
-% weight? }
+their delegated weight, to yet another proxy.
 This is known as \textit{liquid democracy}, which has its own challenges and
 advantages.
 However, simple proxy voting, where proxies cannot transfer their voting power,
