Added comment where I stopped for the night

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -201,7 +201,7 @@ This is known as \textit{liquid democracy}, which has its own challenges and
 advantages.
 However, simple proxy voting, where proxies cannot transfer their voting power,
 is sufficient for the research performed in this paper.
-
+% TODO: Rewrite here and below
 James Miller~\cite{Miller1969} explored the idea of proxy voting as a more
 direct method of democracy over representative democracy.
 Most of his work focuses on the political and societal advantages of proxy
