--- a/references/research.bib
+++ b/references/research.bib
@@ -127,7 +127,6 @@ There is not the first time proxy voting was discussed. There are other articles
 }
 
 @Online{Congress.gov2020,
-  author  = {Congress.gov},
   title   = {H.Res.965 - Authorizing remote voting by proxy in the House of Representatives and providing for official remote committee proceedings during a public health emergency due to a novel coronavirus, and for other purposes.},
   url     = {https://www.congress.gov/bill/116th-congress/house-resolution/965},
   urldate = {2022-10-11},
@@ -143,13 +142,17 @@ There is not the first time proxy voting was discussed. There are other articles
   year   = {1787},
 }
 
-
-
 @Online{Clerk.House.gov2022,
-  author  = {Clerk.House.gov},
   title   = {Proxy Letters},
   url     = {https://clerk.house.gov/ProxyLetter},
   urldate = {2022-10-11},
+  year    = {2022},
+}
+
+@Online{GovTrack2022,
+  title   = {Historical Statistics about Legislation in the U.S. Congress},
+  url     = {https://www.govtrack.us/congress/bills/statistics},
+  urldate = {2022-10-13},
   year    = {2022},
 }
 
