--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -202,17 +202,26 @@ advantages.
 However, simple proxy voting, where proxies cannot transfer their voting power,
 is sufficient for the research performed in this paper.
 % TODO: Rewrite here and below
-James Miller~\cite{Miller1969} explored the idea of proxy voting as a more
-direct method of democracy over representative democracy.
-Most of his work focuses on the political and societal advantages of proxy
-voting, and so is not directly applicable to the problem at hand.
-However, he does bring up the idea this paper calls \textit{expert proxies},
+
+\section{Related Work}\label{sec:related-work}
+James Miller~\cite{Miller1969} the use of proxy voting as a more direct method of
+democracy over representative democracy.
+His work focuses on working the current House and Senate systems entirely by using a
+more-directly involved populace, but his ideas can still be relevant under the current
+system.
+In particular, he introduces the idea we call \textit{expert proxies},
 those being individuals who would `vote as [the inactive voter] would if only
 [the inactive voter] had the time and knowledge to participate
 directly'~\cite[para.~1.3]{Miller1969}.
-This concept is exactly what this paper plans to exploit: create and use expert
-proxies when generating a measurement and allow less accurate techniques to use
-them as proxies.
+In other words, these are well-studied proxies who are familiar with the topic at hand.
+Additionally, he states, `a representative should be an expert, or at least
+competent, in each field [on which they are voting]'~\cite[para.~2.7]{Miller1969}.
+Whereas the past 25 Congresses have seen anywhere from 10 to over 25 thousand issues
+over 2 years (though ultimately only around 10\% are actually
+discussed)~\cite{GovTrack2022}, it would be nearly impossible for any individual
+congress member to remain informed on all topics.
+While the current resolution allows vote by proxy only for emergencies, it is
+possible the resolution could be expanded to exploit this idea.
 
 \etal{Mueller}~\cite{Mueller1972} reaffirms the need for expert proxies and
 goes on to discuss how many of such proxies would be needed under random
