Fixed capitalization in bibliography

--- a/references/research.bib
+++ b/references/research.bib
@@ -127,7 +127,7 @@ There is not the first time proxy voting was discussed. There are other articles
 }
 
 @Online{Congress.gov2020,
-  title   = {H.Res.965 - Authorizing remote voting by proxy in the House of Representatives and providing for official remote committee proceedings during a public health emergency due to a novel coronavirus, and for other purposes.},
+  title   = {{H.Res.965} - {Authorizing} remote voting by proxy in the {House of Representatives} and providing for official remote committee proceedings during a public health emergency due to a novel coronavirus, and for other purposes.},
   url     = {https://www.congress.gov/bill/116th-congress/house-resolution/965},
   urldate = {2022-10-11},
   year    = {2020},
@@ -135,7 +135,7 @@ There is not the first time proxy voting was discussed. There are other articles
 
 @Misc{USConstitution,
   author = {James Madison},
-  title  = {The Constitution of the United States},
+  title  = {{The Constitution of the United States}},
   note   = {Section. 5. states a majority constitutes a quorum, which is required to perform business.},
   url    = {https://www.archives.gov/founding-docs/constitution-transcript},
   month  = sep,
@@ -143,6 +143,7 @@ There is not the first time proxy voting was discussed. There are other articles
 }
 
 @Online{Clerk.House.gov2022,
+  date    = {2022-10-13},
   title   = {Proxy Letters},
   url     = {https://clerk.house.gov/ProxyLetter},
   urldate = {2022-10-11},
@@ -150,7 +151,7 @@ There is not the first time proxy voting was discussed. There are other articles
 }
 
 @Online{GovTrack2022,
-  title   = {Historical Statistics about Legislation in the U.S. Congress},
+  title   = {Historical Statistics about Legislation in the {U.S. Congress}},
   url     = {https://www.govtrack.us/congress/bills/statistics},
   urldate = {2022-10-13},
   year    = {2022},
