--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -206,7 +206,7 @@ is sufficient for the research performed in this paper.
 \section{Related Work}\label{sec:related-work}
 James Miller~\cite{Miller1969} proposed using proxy voting as a more direct
 method of democracy rather than representative democracy.
-His work focuses on working the current House and Senate systems entirely by using a
+His work focuses on reworking the current House and Senate systems entirely by using a
 more-directly involved populace, but his ideas can still be relevant under the current
 system.
 In particular, he introduces the idea we call \textit{expert proxies},
