--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -193,7 +193,8 @@ When operating under the Congress resolution, system welfare can also be enhance
 through proxy voting by allowing ill members to quarantine and ensure the health
 of other agents.
 As will be discussed in \autoref{ch:results}, this additional system welfare comes at
-the cost of some system accuracy since not all information can be restored.
+the cost of some system accuracy in terms of the actual preferences of the voters
+since not all information can be restored.
 
 In some cases, the proxy is also able to transfer their own vote, as well as the rest of
 their delegated weight, to yet another proxy.
