Set Miller to read

--- a/references/research.bib
+++ b/references/research.bib
@@ -82,12 +82,12 @@ Page 62 might be interesting. It states random democracy might need 1000+ partic
 
 @Article{Miller1969,
   author     = {Miller, James C.},
-  journal    = {Public Choice},
   title      = {A program for direct and proxy voting in the legislative process},
-  year       = {1969},
+  doi        = {10.1007/BF01718736},
   issn       = {1573-7101},
   number     = {1},
   pages      = {107--113},
+  url        = {https://doi.org/10.1007/BF01718736},
   volume     = {7},
   abstract   = {This paper has argued that changing technology has increased opportunities for voter participation in the legislative process and has presented a proposal which takes some advantage of such possibilities. The objective has not been so much to criticize our present legislative voting arrangement, but to suggest for the future an alternative that might prove superior.},
   comment    = {Accessible: [https://www.jstor.org/stable/30022612](https://www.jstor.org/stable/30022612)
@@ -95,10 +95,10 @@ Page 62 might be interesting. It states random democracy might need 1000+ partic
 Oft cited source of proxy voting--mostly political.
 
 There is not the first time proxy voting was discussed. There are other articles in 1969 that discuss similar ideas, as well as Oregon discussing similar ideas in 1912.},
-  doi        = {10.1007/BF01718736},
-  readstatus = {skimmed},
+  journal    = {Public Choice},
+  readstatus = {read},
   refid      = {Miller1969},
-  url        = {https://doi.org/10.1007/BF01718736},
+  year       = {1969},
 }
 
 @Article{Golz2021,
