Added actual source of super voters

--- a/references/research.bib
+++ b/references/research.bib
@@ -157,4 +157,19 @@ There is not the first time proxy voting was discussed. There are other articles
   year    = {2022},
 }
 
+@Article{Kling2015,
+  author       = {Kling, Christoph Carl and Kunegis, Jerome and Hartmann, Heinrich and Strohmaier, Markus and Staab, Steffen},
+  date         = {2015-03},
+  journaltitle = {arXiv e-prints},
+  title        = {Voting Behaviour and Power in Online Democracy: A Study of LiquidFeedback in Germany's Pirate Party},
+  eid          = {arXiv:1503.07723},
+  eprint       = {1503.07723},
+  eprintclass  = {cs.CY},
+  eprinttype   = {arXiv},
+  pages        = {arXiv:1503.07723},
+  url          = {https://ui.adsabs.harvard.edu/abs/2015arXiv150307723K},
+  abstract     = {In recent years, political parties have adopted Online Delegative         Democracy platforms such as LiquidFeedback to organise         themselves and their political agendas via a grassroots         approach. A common objection against the use of these platforms         is the delegation system, where a user can delegate his vote to         another user, giving rise to so-called super-voters, i.e.         powerful users who receive many delegations. It has been         asserted in the past that the presence of these super-voters         undermines the democratic process, and therefore delegative         democracy should be avoided. In this paper, we look at the         emergence of super-voters in the largest delegative online         democracy platform worldwide, operated by Germany's Pirate         Party. We investigate the distribution of power within the party         systematically, study whether super-voters exist, and explore         the influence they have on the outcome of votings conducted         online. While we find that the theoretical power of super-voters         is indeed high, we also observe that they use their power         wisely. Super-voters do not fully act on their power to change         the outcome of votes, but they vote in favour of proposals with         the majority of voters in many cases thereby exhibiting a         stabilising effect on the system. We use these findings to         present a novel class of power indices that considers observed         voting biases and gives significantly better predictions than         state-of-the-art measures.},
+  keywords     = {Computer Science - Computers and Society, Computer Science - Social and Information Networks, K.4.1},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
