Fixed sourcing for super voter paragraph

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -225,11 +225,12 @@ While the current resolution allows vote by proxy only for emergencies, it is
 possible the resolution could be expanded to exploit this idea.
 
 However, proxy voting is not without its flaws.
-\etal{Gölz} investigated a weakness in liquid democracy dubbed `super voters'
-~\cite[para.~1.3]{Golz2021}, which are proxies that receive an extremely large
-amount of power.
-This can be problematic because the result of a system will be too biased
-towards the super voter.  \com{Explain why the super is a problem. It seems part of
+\etal{Kling} investigated a weakness in liquid democracy dubbed `super voters'
+~\cite[para.~1.3]{Kling2015}, which are proxies that receive an extremely large
+amount of power, while others gain very little.
+While they determined these proxies tend to use their power wisely, there can be
+situations where they can be problematic.
+\com{Explain why the super is a problem. It seems part of
 the proxy philosophy.
 If many voters use proxies,  you aren't going to see the richness of preferences.
 This shouldn't have been a surprise.}
